<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.7.5</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <packaging>pom</packaging>
  <groupId>io.github.vladimirshefer</groupId>
  <artifactId>spring-chatbots-parent</artifactId>
  <version>${revision}</version>
  <name>Spring Chatbots</name>
  <description>The parent for all spring-chatbots libraries</description>

  <modules>
    <module>spring-chatbots-core</module>
    <module>spring-boot-starter-chatbots-telegram</module>
    <module>demo-application</module>
    <module>spring-boot-starter-chatbots-discord</module>
  </modules>

  <properties>
    <revision>0.0.1-SNAPSHOT</revision>
    <java.version>1.8</java.version>
    <maven.compiler.source>8</maven.compiler.source>
    <maven.compiler.target>8</maven.compiler.target>
    <nexus.artifactory.url>
      https://nexus.hetzner.shefer.dev/repository/spring-boot-starter-telegram
    </nexus.artifactory.url>
    <github.artifactory.url>
      https://maven.pkg.github.com/vladimirshefer/spring-boot-starter-telegram
    </github.artifactory.url>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.telegram</groupId>
        <artifactId>telegrambots</artifactId>
        <version>6.1.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>com.discord4j</groupId>
        <artifactId>discord4j-core</artifactId>
        <version>3.2.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.1.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>2.8.1</version>
        <executions>
          <execution>
            <id>default-deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.3.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>package</phase>
            <configuration>
              <additionalJOption>-Xdoclint:none</additionalJOption>
            </configuration>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>github</id>
      <url>${github.artifactory.url}</url>
    </repository>
    <snapshotRepository>
      <id>github</id>
      <url>${github.artifactory.url}</url>
    </snapshotRepository>
  </distributionManagement>

  <!--https://maven.apache.org/pom.html#issue-management-->
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/vladimirshefer/spring-boot-starter-telegram/issues</url>
  </issueManagement>


</project>


  <!--<scm>-->
  <!--<tag>HEAD</tag>-->
  <!--<connection>scm:git:git://github.com/vladimirshefer/spring-boot-starter-telegram.git</connection>-->
  <!--<developerConnection>scm:git:git@github.com:vladimirshefer/spring-boot-starter-telegram.git</developerConnection>-->
  <!--<url>https://github.com/vladimirshefer/spring-boot-starter-telegram</url>-->
  <!--</scm>-->


  <!--  <repositories>-->
  <!--    <repository>-->
  <!--      <id>nexus</id>-->
  <!--      <name>Nexus</name>-->
  <!--      <url>${nexus.artifactory.url}</url>-->
  <!--    </repository>-->
  <!--  </repositories>-->

  <!--  <profiles>-->
  <!--    <profile>-->
  <!--      <id>ci</id>-->
  <!--      <activation>-->
  <!--        <property>-->
  <!--          <name>env.buildNumber</name>-->
  <!--        </property>-->
  <!--      </activation>-->
  <!--      <properties>-->
  <!--        &lt;!&ndash; Override only if necessary &ndash;&gt;-->
  <!--        <buildNumber>${env.buildNumber}</buildNumber>-->
  <!--      </properties>-->
  <!--    </profile>-->
  <!--  </profiles>-->
